# TreeScout

./: .gitignore  CLAUDE.md  Cargo.toml  package-lock.json  package.json
assets/: mock.html  mock_v2.html
crates/astar/: Cargo.toml
crates/astar/src/: engine.rs  lib.rs  node.rs  tree.rs  tune.rs
crates/embedding/: Cargo.toml
crates/embedding/examples/: cosine_demo.rs
crates/embedding/src/: error.rs  lib.rs  quantize.rs  similarity.rs  static_embedder.rs
crates/index/: Cargo.toml
crates/index/examples/: nearest_demo.rs
crates/index/src/: error.rs  folder_indexer.rs  folder_matrix.rs  lib.rs  schema.rs  store.rs
crates/nlp/: Cargo.toml
crates/nlp/examples/: repl.rs
crates/nlp/src/: lib.rs  parser.rs  tokenizer.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: error.rs  lib.rs  scoring.rs
crates/preview/: Cargo.toml
crates/preview/src/: kind.rs  lib.rs  text.rs
crates/search/: Cargo.toml
crates/search/src/: everything.rs  lib.rs
docs/: architecture.md  backend.md  design.md  frontend.md  status.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: browse_session.rs  folder_index.rs  lib.rs
src/components/ColumnView/: ColumnPanel.tsx  ColumnView.tsx  HeatmapItem.tsx
src/components/Menu/: MenuBarPopup.tsx
src/components/Preview/: PreviewPane.tsx
src/components/SearchBar/: ResultList.tsx  SearchBar.tsx  ViewModePopup.tsx
src/hooks/: useBrowseWindow.ts
src/lib/: heatmap.ts  tauri.ts
