[package]
name = "treescout"
version = "0.1.0"
description = "超高速セマンティックファイル探索"
authors = ["uRay011"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
search = { path = "../crates/search" }
pipeline = { path = "../crates/pipeline" }
nlp = { path = "../crates/nlp" }
astar = { path = "../crates/astar" }
preview = { path = "../crates/preview" }
index = { path = "../crates/index" }
embedding = { path = "../crates/embedding", default-features = false, features = ["static"] }

