[package]
name = "preview"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "fs", "io-util"] }
